--- a/css/acquia_lift.admin.css
+++ b/css/acquia_lift.admin.css
@@ -575,6 +575,10 @@ ul.acquia-lift-variations-list.acquia-lift-variations-lockstep > li {
   border: none;
 }
 
+.acquia-lift-review-next-steps .item-list h3 {
+  font-size: 1rem;
+}
+
 /* Personalization listing page */
 #personalize-personalizations-list table tr td {
   vertical-align: middle;
