--- a/src/css/acquia_lift.debugger.scss
+++ b/src/css/acquia_lift.debugger.scss
@@ -1,27 +1,29 @@
-$debugger-max-width: 66em;
+$debugger-max-width: 80vw;
 $debugger-transition-duration: 300ms;
+$font-size: .8em;
+$background-color:#efefef;
 
-#debugger {
+[id="debugger"] {
+  display: none;
+}
+
+.debugger {
   position: fixed;
-  z-index: 100;
+  display: block;
+  z-index: 1000;
   bottom: 0;
   left: 0;
+  color: #333333;
   width: 100%;
-  background: rgba(#048, .8);
-  background: linear-gradient(
-                  to bottom,
-                  rgba(#048, .9),
-                  rgba(#048, .75) 20%,
-                  rgba(#048, .75) 70%,
-                  rgba(#048, .9) 100%
-  );
-  color: #fff;
+  background: white;
   font-family: sans-serif;
-  font-size: 14px;
+  font-size: $font-size;
   line-height: 1.5;
   box-shadow: 0 0 .1em 0 rgba(#000, .8);
   border-top-right-radius: .4em;
   border-top-left-radius: .4em;
+  transform: rotate3d(0, 0, 0, 0) scale(.88);
+  transform-origin: bottom;
   transition: all $debugger-transition-duration;
 
   @media screen and (min-width: 600px) {
@@ -29,114 +31,284 @@ $debugger-transition-duration: 300ms;
     width: calc(100% - 2em);
   }
 
-  @media screen and (min-width: ($debugger-max-width + 2em)) {
+  @media screen and (min-width: ($debugger-max-width + 2vw)) {
     left: 50vw;
     width: $debugger-max-width;
-    margin-left: -($debugger-max-width / 2);
+    //margin-left: -($debugger-max-width / 2);
+  }
+  .float{
+    float:left;
+    padding-right: 1em;
+    vertical-align: middle;
+    /*padding-left: 3em;*/
   }
 
+  .debugger-font-size{
+    font-size:10px;
+  }
+
+  .minheight{
+    padding: 0px;
+  }
+  table{
+    font-size:$font-size;
+    background-color: white;
+
+    img{
+      width: 20px;
+      padding:{
+        right: .15em;
+        left: .15em;
+        top: 0em;
+        bottom: 0em;
+      }
+      vertical-align:middle;
+      margin:0px;
+    }
+  }
+
+  td{
+    padding:0px;
+    background-color: white;
+    vertical-align:middle;
+    border-bottom:none;
+  }
+  tr{
+    padding:0px;
+  }
+
+  th{
+    background-color:white;
+    color:black;
+    padding:{
+      top:.1em;
+      bottom:.2em;
+      right: 0px;
+      left: 0px;
+    }
+    border-bottom:none;
+  }
+  button{
+    min-height: 10px;
+    background-color: $background-color;
+    border-radius: 0px;
+    font-size: $font-size;
+    border-color: lightgray;
+    border-style: solid;
+    border-width: 1px;
+    color: black;
+  }
+
+  h5 {
+    font-size: 1.125rem;
+    line-height: 1.33333;
+    margin-top: 0;
+    padding-top: 0.37rem;
+    margin-bottom: 0.63rem;
+    font-family: "Helvetica Neue", helvetica, "Segoe UI", segoe, "Ubuntu", "Droid Sans", "Arial", sans-serif;
+    font-weight: 400;
+  }
   &,
   * {
     box-sizing: border-box;
   }
+}
+.debugger__filters {
+  min-height: 38px;
+  width:100%;
+  display:inline-block;
+  vertical-align:top;
+  border-color:lightgray;
+  background-color:$background-color;
+}
+.debugger__navigation{
+  background-color:$background-color;
+  height: 3em;
+  border-color: lightgray;
+  border-bottom-style: solid;
+  border-bottom-width: 2px;
 
-  .debugger__actions {
-    float: right;
-    margin: {
-      top: -.8em;
-      right: .4em;
-      left: .4em;
-    }
+  .debugger__navigation__item{
+    display: block;
+    float: left;
+    width: 15%;
+    height:100%;
+    margin: 0px;
+    padding-right: 10px;
+    border-right: 1px solid;
+    //margin: 0;
+    //padding: 0;
+  }
+  width:100%;
+  display: inline-block;
+}
+.debugger__select__filter{
+  float:left;
+}
+.debugger__navigation__item{
+  float:left;
+  position:relative;
+  color:black;
+  background-color:$background-color;
+  border-color:darkgray;
+  margin-bottom:0px;
+  border-radius: 0rem;
+
+  &:hover,
+  &:focus {
+    text-decoration: none;
   }
 
-  [class*='debugger__action__'] {
-    display: inline-block;
-    background: #4bd;
-    line-height: 1.3;
-    font-size: 1.4em;
-    width: 1.4em;
-    height: 1.4em;
-    margin: {
-      right: .1em;
-      left: .1em;
-    }
-    text-align: center;
-    border-radius: 50%;
-    cursor: pointer;
-    transition: opacity $debugger-transition-duration;
+  &:hover {
+    transform: scale(1.02, 1.02);
   }
 
-  .debugger__title {
-    text-transform: uppercase;
-    font-size: .88em;
-    font-weight: normal;
-    line-height: 1;
-    color: rgba(#fff, .7);
-    padding: .45em 1em .35em;
-    margin: 0;
-    border-top-right-radius: .4em;
-    border-top-left-radius: .4em;
-    transition: all $debugger-transition-duration;
+  &:focus {
+    outline: $border-width-base solid rgba($link-color-base, .6);
+    box-shadow: 0 0 .4rem rgba($link-color-base, .9);
+    background-color: ghostwhite;
+    color: black;
   }
 
-  .debugger__content {
-    padding: {
-      right: 1em;
-      left: 1em;
-    }
-    overflow-y: auto;
-    height: 0;
-    transition: height $debugger-transition-duration, padding $debugger-transition-duration;
+  &:active {
+    background-image: none;
+    transform: scale(1, 1);
+    background-color:white;
+    box-shadow: 0 0 .3rem rgba($link-color-base, .9), inset 0 .1rem .3rem rgba(#000, .4);
   }
 
-  .debugger__data {
-    th {
-      text-align: left;
-    }
-
-    tbody {
-      font-family: monospace;
-    }
+  &.disabled,
+  &[disabled],
+  fieldset[disabled] & {
+    cursor: not-allowed;
+    pointer-events: none; // Future-proof disabling of clicks
+    opacity: .65;
+    box-shadow: none;
   }
 
-  &.is-active {
+}
+
+.debugger__actions {
+  float: right;
+  margin: {
+    top: -.5em;
+    right: .4em;
+    left: .4em;
+  }
+}
+
+[class*='debugger__action__'] {
+  display: inline-block;
+  background: #4bd;
+  line-height: 1.3;
+  font-size: 1.4em;
+  width: 1.4em;
+  height: 1.4em;
+  margin: {
+    right: .1em;
+    left: .1em;
+  }
+  text-align: center;
+  border-radius: 50%;
+  cursor: pointer;
+  transition: opacity $debugger-transition-duration;
+}
+
+.debugger__title {
+  text-transform: uppercase;
+  font-size: .88em;
+  font-weight: normal;
+  line-height: 1;
+  color: $background-color;
+  padding: .45em 1em .35em;
+  margin: 0;
+  border-top-right-radius: .4em;
+  border-top-left-radius: .4em;
+  transition: all $debugger-transition-duration;
+
+}
+
+.debugger__content {
+  margin:{
+    top: -.4em;
+  }
+  display:block;
+  overflow-y: auto;
+  height: 0;
+  float:up;
+  //transition: height $debugger-transition-duration, padding $debugger-transition-duration;
+}
+
+.debugger__profile{
+  padding:3em;
+  td:first-child{
+    width: 30%;
+  }
+  table{
+    font-size: $font-size;
+  }
+  ul{
+    list-style: circle;
+    display: inline;
+    background-color:green;
+  }
+  li{
+    list-style-type: circle;
+  }
+}
+.debugger__data {
+  width: 100%;
+
+  th {
+    text-align: left;
+  }
+
+  tbody {
+    font-family: monospace;
+  }
+}
+
+.debugger {
+  &.is-open {
     box-shadow: 0 -.1em .5em -.01em rgba(#000, .8);
+    transform: rotate3d(0, 0, 0, 0 ) scale(1);
 
     .debugger__title {
-      background: #048;
+      background: #d7d7d7;
       color: #fff;
     }
 
     .debugger__content {
-      height: 20vh;
-      padding: {
-        top: 1em;
-        bottom: 1em;
-      }
+      height: 26vh;
+      //padding: {
+      //  top: 1em;
+      //  bottom: 1em;
+      //}
     }
 
-    .debugger__action__activate {
+    .debugger__action__open {
       @extend %debugger-action-disabled;
     }
   }
 
-  &.is-expanded {
+  &.is-maximized {
     box-shadow: 0 -.1em .5em -.01em rgba(#000, .8);
+    transform: scale(1);
 
     .debugger__title {
-      background: #048;
+      background: $background-color;
       color: #fff;
     }
 
     .debugger__content {
-      height: 95vh;
-      padding: {
-        top: 1em;
-        bottom: 1em;
-      }
+      height: 80vh;
+      //padding: {
+      //  top: 1em;
+      //  bottom: 1em;
+      //}
     }
 
-    .debugger__action__expand {
+    .debugger__action__maximize {
       @extend %debugger-action-disabled;
     }
   }
@@ -147,8 +319,395 @@ $debugger-transition-duration: 300ms;
     }
   }
 }
+.debugger__preview{
+  padding:3em;
+  table{
+    padding:1em;
+  }
+  td:first-child{
+    width: 30%;
+  }
+
+}
+
+.debugger__log{
+  padding:3em;
+}
+.debugger__action__open {
+  @extend %debugger-arrow;
+
+  .is-maximized & {
+    transform: scaleY(-1);
+  }
+}
+
+.debugger__action__close {
+  @extend %debugger-minus;
+}
+
+.debugger__action__maximize {
+  @extend %debugger-longarrow;
+
+  .is-open & {
+    @extend %debugger-arrow;
+
+    &::before {
+      display: none;
+    }
+  }
+}
+
+.debugger__action__destroy {
+  @extend %debugger-cross;
+}
+
+%debugger-longarrow {
+  position: relative;
+
+  &::before {
+    content: '';
+    display: block;
+    position: absolute;
+    left: calc(50% - .15em / 2);
+    top: 22%;
+    width: .15em;
+    height: 60%;
+    background-color: #fff;
+  }
+
+  .debugger__icon {
+    &::before,
+    &::after {
+      content: '';
+      display: block;
+      position: absolute;
+      top: calc(30% - .15em / 2);
+      width: 30%;
+      height: .15em;
+      background-color: #fff;
+    }
+
+    &::before {
+      right: 26%;
+      transform: rotate(40deg);
+    }
+
+    &::after {
+      left: 26%;
+      transform: rotate(-40deg);
+    }
+  }
+}
+
+%debugger-arrow {
+  position: relative;
+
+  .debugger__icon {
+    &::before,
+    &::after {
+      content: '';
+      display: block;
+      position: absolute;
+      top: calc(44% - .15em / 2);
+      width: 50%;
+      height: .15em;
+      background-color: #fff;
+    }
+    &::before {
+      right: 10%;
+      transform: rotate(40deg);
+    }
+
+    &::after {
+      left: 10%;
+      transform: rotate(-40deg);
+    }
+  }
+}
+
+%debugger-minus {
+  position: relative;
+
+  .debugger__icon {
+    &::before,
+    &::after {
+      content: '';
+      display: block;
+      position: absolute;
+      top: calc(50% - .16em / 2);
+      width: 40%;
+      height: .16em;
+      background-color: #fff;
+    }
+    &::before {
+      right: 12%;
+      transform: rotate(0);
+    }
+
+    &::after {
+      left: 12%;
+      transform: rotate(0);
+    }
+  }
+}
+
+.debugger__icon__error{
+  fill:red;
+}
+
+%debugger-cross {
+  position: relative;
+
+  .debugger__icon {
+    &::before,
+    &::after {
+      content: '';
+      display: block;
+      position: absolute;
+      left: calc(20% - .15em / 2);
+      top: calc(50% - .15em / 2);
+      width: 70%;
+      height: .15em;
+      background-color: #fff;
+    }
+    &::before {
+      /* right: 10%; */
+      transform: rotate(45deg);
+    }
+
+    &::after {
+      /* left: 10%; */
+      transform: rotate(-45deg);
+    }
+  }
+}
 
 %debugger-action-disabled {
-  opacity: .4;
+  opacity: 0;
+  visibility: hidden;
+  transform: scale(0);
+  font-size: 0;
+  margin: 0;
   cursor: default;
+
+  &[aria-hidden="true"] {
+    display: none;
+  }
+}
+
+.multiSelect{
+  .layout{
+    float: none;
+  }
+
+  .line{
+    padding: 2px 2px 4px 2px;
+    max-height: 30px;
+    overflow:hidden;
+    box-sizing: content-box
+  }
+
+  .acol {
+    display: inline-block;
+    min-width: 12px;
+  }
+
+  button {
+    position: relative;
+    text-align: center;
+    cursor: pointer;
+    margin-bottom: 0px;
+    border: none;
+    min-height: 38px !important;
+    min-width: 10%;
+    color: #555;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    -o-user-select: none;
+    user-select: none;
+    white-space: normal;
+    background-color: $background-color;
+    font-size: 10px;
+    //&:hover {
+    //  background-image: linear-gradient(#fff, #e9e9e9);
+    //}
+
+    &:disabled {
+      background-image: linear-gradient(#fff, #fff);
+      border: 1px solid #ddd;
+      color: #999;
+    }
+  }
+  .buttonClicked {
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.15) inset, 0 1px 2px rgba(0, 0, 0, 0.05);
+  }
+
+  .buttonLabel {
+    display: inline-block;
+    padding: 5px 0px 5px 0px;
+  }
+
+  .checkboxLayer {
+    background-color: #fff;
+    position: absolute;
+    z-index: 999;
+    border: 1px solid rgba(0, 0, 0, 0.15);
+    border-radius: 4px;
+    -webkit-box-shadow: 0 6px 12px rgba(0, 0, 0, 0.175);
+    box-shadow: 0 6px 12px rgba(0, 0, 0, 0.175);
+    min-width:278px;
+    display: none !important;
+  }
+
+  .inputFilter {
+    border-radius: 2px;
+    border: 1px solid #ccc;
+    height: 26px;
+    font-size: 10px;
+    width:100%;
+    padding-left:7px;
+    -webkit-box-sizing: border-box; /* Safari/Chrome, other WebKit */
+    -moz-box-sizing: border-box;    /* Firefox, other Gecko */
+    box-sizing: border-box;         /* Opera/IE 8+ */
+    color: #888;
+    -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, .075);
+    box-shadow: inset 0 1px 1px rgba(0, 0, 0, .075);
+  }
+
+  .checkBoxContainer {
+    display: block;
+    padding:{
+      bottom: 8px;
+      left: 8px;
+      right: 8px;
+    }
+    overflow: hidden;
+  }
+
+  .show {
+    display: block !important;
+  }
+
+  .multiSelectItem {
+    display: block;
+    padding: 3px;
+    color: #444;
+    white-space: nowrap;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    -o-user-select: none;
+    user-select: none;
+    border: 1px solid transparent;
+    position: relative;
+    font-size: 10px;
+    min-height: 32px;
+
+    &:not(.multiSelectGroup).selected
+    {
+      background-image: linear-gradient( #e9e9e9, #f1f1f1 );
+      color: #555;
+      cursor: pointer;
+      font-size: 10px;
+      border-top: 1px solid #e4e4e4;
+      border-left: 1px solid #e4e4e4;
+      border-right: 1px solid #d9d9d9;
+    }
+
+    &:hover{
+      background-image: linear-gradient( #c1c1c1, #999 ) !important;
+      color: #fff !important;
+      cursor: pointer;
+      border: 1px solid #ccc !important;
+    }
+    .acol label {
+      display: inline-block;
+      /*padding-right: 30px;*/
+      margin: 0px;
+      font-weight: normal;
+      line-height: normal;
+    }
+
+
+  }
+  .multiSelectFocus {
+    background-image: linear-gradient( #c1c1c1, #999 ) !important;
+    color: #fff !important;
+    cursor: pointer;
+    border: 1px solid #ccc !important;
+
+    &:hover
+    {
+      cursor: pointer;
+    }
+  }
+
+  .tickMark {
+    display:inline-block;
+    position: absolute;
+    right: 10px;
+    top: 7px;
+    font-size: 10px;
+  }
+
+  .checkbox {
+    color: #ddd !important;
+    position: absolute;
+    left: -9999px;
+    cursor: pointer;
+  }
+  img {
+    /*vertical-align: middle;*/
+    margin-bottom:0px;
+    max-height: 22px;
+    max-width:22px;
+  }
+
+}
+
+
+.autocomplete{
+  width: 100%;
+  border-radius: 0px;
+  position: relative;
+
+  input{
+    font-size: 1.2em;
+    width: 100%;
+    border-radius: 0px;
+    line-height: 1;
+    /*padding:0.4em;*/
+  }
+
+  ul{
+    position: absolute;
+    left: 0;
+    width: 100%;
+    border-left: 1px solid #888;
+    border-right: 1px solid #888;
+    border-bottom: 1px solid #888;
+    z-index: 1;
+    background-color:white;
+  }
+
+  li{
+    text-align: left;
+    list-style:none;
+    width: 100%;
+    /*padding:0.4em;*/
+    background-color: #fff;
+  }
+  li.active{
+    width: 100%;
+    background-color: #4bf;
+  }
+
+  .highlight {
+    background-color: #E2E2E2;
+  }
+  li.active .highlight {
+    background: #666;
+    color: #fff;
+  }
 }
